add swagger and sign methos
